fix: scroll bar flickering on modal open

--- a/src/assets/styles/generic/_default.scss
+++ b/src/assets/styles/generic/_default.scss
@@ -30,6 +30,8 @@ body {
 }
 
 body {
+  --current-body-background: #21285a;
+
   background-color: var(--current-body-background);
 }
 
