--- a/src/assets/styles/helpers/_scroll.scss
+++ b/src/assets/styles/helpers/_scroll.scss
@@ -16,8 +16,8 @@
 
 // chrome custom scroll bar
 .h-primary-scroll::-webkit-scrollbar {
-  height: rem(15);
-  width: rem(15);
+  height: 15px;
+  width: 15px;
 }
 
 .h-primary-scroll::-webkit-scrollbar-track {
