--- a/src/components/organism/PokemonCardList/styles.module.scss
+++ b/src/components/organism/PokemonCardList/styles.module.scss
@@ -3,8 +3,8 @@
 
 .cardContainer {
   list-style: none;
-  margin-bottom: rem(40);
-  margin-top: rem(40);
+  margin-bottom: 0;
+  margin-top: 0;
   padding-left: 0;
 }
 
